--- a/admin_login.html
+++ b/admin_login.html
@@ -31,9 +31,24 @@
             Customer Login</a>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase-inline.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script>
+        console.log('Supabase Global:', window.supabase);
+        // Inline Supabase Config
+        // Inline Supabase Config
+        const supabaseUrl = 'https://pklaofjfpcrlgevxkozy.supabase.co';
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBrbGFvZmpmcGNybGdldnhrb3p5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyNjY1MDcsImV4cCI6MjA4MDg0MjUwN30.sNg6OVLocM1D-bG9LXTlDSsy6s74oW1SQ89QWCMbOKE';
+
+        // Initialize client
+        let _supabase = null;
+        if (typeof supabase !== 'undefined') {
+            const { createClient } = supabase;
+            _supabase = createClient(supabaseUrl, supabaseAnonKey);
+            console.log('Supabase Client (Inline):', _supabase);
+        } else {
+            alert('Supabase Library Failed to Load');
+        }
+
         async function handleAdminLogin(e) {
             e.preventDefault();
             const email = document.getElementById('email').value;
@@ -43,8 +58,8 @@
             errorMsg.style.display = 'none';
 
             try {
-                // 1. Authenticate
-                const { data, error } = await supabase.auth.signInWithPassword({
+                // 1. Authenticate using _supabase (the initialized client)
+                const { data, error } = await _supabase.auth.signInWithPassword({
                     email: email,
                     password: password
                 });
