--- a/admin_profile.html
+++ b/admin_profile.html
@@ -165,7 +165,7 @@
         async function verifyEmail() {
             // Trigger Supabase Resend
             alert('Verification email sent to ' + adminUser.email);
-            // supabase.auth.resend({ type: 'signup', email: adminUser.email });
+            // _supabase.auth.resend({ type: 'signup', email: adminUser.email });
         }
 
         async function startPhoneVerification() {
