--- a/menu.html
+++ b/menu.html
@@ -19,8 +19,7 @@
             </div>
         </div>
 
-        <div class="category-nav"
-            style="position:sticky; top:0; background:#1a1a2e; z-index:100; padding:10px 20px; overflow-x:auto; white-space:nowrap; border-bottom:1px solid #333; margin-bottom:20px;">
+        <div class="category-nav">
             <button class="cat-btn active" onclick="filterMenu('All')"
                 style="background:none; border:none; color:white; padding:8px 16px; margin-right:8px; border-radius:20px; cursor:pointer; font-weight:bold;">All</button>
             <button class="cat-btn" onclick="filterMenu('Burgers')"
