--- a/landing.html
+++ b/landing.html
@@ -3,49 +3,73 @@
 
 <head>
     <title>Welcome - Gourmet Bites</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Supabase for Staff check -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
-        .landing-container {
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
+            min-height: 100vh;
+            margin: 0;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            padding: 20px;
+            color: white;
+        }
+
+        .landing-container {
             text-align: center;
+            width: 100%;
+            max-width: 600px;
+            padding: 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin-bottom: 10px;
         }
 
         .role-card {
-            background: #1a1a2e;
-            border: 1px solid #333;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 30px;
+            margin: 20px 0;
             border-radius: 16px;
-            padding: 24px;
-            margin: 12px 0;
-            width: 100%;
-            max-width: 320px;
             cursor: pointer;
-            transition: transform 0.2s, background 0.2s;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 20px;
             text-decoration: none;
             color: white;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
-        .role-card:active {
-            transform: scale(0.98);
-            background: #252540;
+        .role-card:hover {
+            background: rgba(255, 255, 255, 0.1);
+            transform: translateY(-5px);
+            border-color: #ff6600;
         }
 
         .role-icon {
-            font-size: 48px;
-            margin-bottom: 12px;
+            font-size: 40px;
+            background: rgba(255, 255, 255, 0.1);
+            width: 80px;
+            height: 80px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+        }
+
+        .role-info {
+            text-align: left;
+            flex: 1;
         }
 
         .role-title {
             font-size: 20px;
             font-weight: bold;
-            margin-bottom: 8px;
+            margin-bottom: 5px;
             color: #ff6600;
         }
 
@@ -53,80 +77,71 @@
             font-size: 14px;
             color: #999;
         }
-
-        .logout-link {
-            margin-top: 30px;
-            color: #666;
-            text-decoration: underline;
-            cursor: pointer;
-        }
     </style>
 </head>
 
 <body>
     <div class="landing-container">
-        <h1 style="margin-bottom: 10px;">Welcome Back!</h1>
-        <p style="color: #999; margin-bottom: 40px;" id="welcomeName">User</p>
+        <h1>Welcome Back</h1>
+        <p style="color:#999; margin-bottom:40px;" id="welcomeName">User</p>
 
+        <!-- Customer Option -->
         <a href="menu.html" class="role-card">
-            <span class="role-icon">🍽️</span>
-            <span class="role-title">Customer View</span>
-            <span class="role-desc">Browse menu, order food, and dine-in</span>
+            <div class="role-icon">🍔</div>
+            <div class="role-info">
+                <div class="role-title">Customer View</div>
+                <div class="role-desc">Browse menu, place orders, and track status.</div>
+            </div>
         </a>
 
-        <a href="admin_dashboard.html" class="role-card" id="staffLink" style="display:none; border-color: #ff6600;">
-            <span class="role-icon">⚡</span>
-            <span class="role-title">Staff Dashboard</span>
-            <span class="role-desc">Manage orders, tables, and menu</span>
-        </a>
+        <!-- Staff Option (Hidden by default) -->
+        <div id="staffLink" class="role-card" style="display:none; border-color:#ff6600;">
+            <div class="role-icon">👨‍🍳</div>
+            <div class="role-info">
+                <div class="role-title">Staff Dashboard</div>
+                <div class="role-desc">Manage orders, update menu, and view reports.</div>
+            </div>
+        </div>
 
-        <div onclick="logout()" class="logout-link">Logout</div>
+        <button onclick="logout()"
+            style="margin-top:20px; background:none; border:none; color:#666; cursor:pointer; text-decoration:underline;">Logout</button>
     </div>
 
-    <!-- Supabase -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase-inline.js"></script>
-
+    <!-- Supabase Inline (Updated to use unpkg just in case) -->
+    <!-- We need this to check the 'staff' table -->
     <script>
-        // Check Auth using Supabase Session (Handles OAuth Redirects)
-        handleSession();
+        const supabaseUrl = 'https://pklaofjfpcrlgevxkozy.supabase.co';
+        const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBrbGFvZmpmcGNybGdldnhrb3p5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyNjY1MDcsImV4cCI6MjA4MDg0MjUwN30.sNg6OVLocM1D-bG9LXTlDSsy6s74oW1SQ89QWCMbOKE';
 
-        async function handleSession() {
-            // 1. Check if we just came back from Google Login (URL hash)
-            const { data: { session }, error } = await _supabase.auth.getSession();
+        // Init Supabase
+        let _supabase = null;
+        if (window.supabase) {
+            _supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
+        }
 
-            if (session) {
-                // We have a live session! Update localStorage for legacy app compatibility
-                const user = session.user;
-                const legacyUser = {
-                    id: user.id,
-                    email: user.email,
-                    phone: user.phone,
-                    name: user.user_metadata.full_name || user.email
-                };
-                localStorage.setItem('user', JSON.stringify(legacyUser));
+        // Check Auth using LocalStorage (Populated by Login Sync)
+        checkAuth();
 
-                // Update UI
-                renderUser(legacyUser);
-                checkUserRole(user.id);
-            } else {
-                // No session? Check localStorage fallback or redirect
-                const local = JSON.parse(localStorage.getItem('user'));
-                if (local) {
-                    renderUser(local);
-                    checkUserRole(local.id);
-                } else {
-                    window.location.href = 'login.html';
-                }
+        async function checkAuth() {
+            const user = JSON.parse(localStorage.getItem('user'));
+
+            if (!user) {
+                window.location.href = 'login.html';
+                return;
             }
 
-            // Listen for auth changes (Logout, etc.)
-            _supabase.auth.onAuthStateChange((event, session) => {
-                if (event === 'SIGNED_OUT') {
-                    localStorage.removeItem('user');
-                    window.location.href = 'login.html';
-                }
-            });
+            // Display Name & ID
+            renderUser(user);
+
+            // Check Role (Using the ID we synced to DB)
+            if (user.id && _supabase) {
+                checkUserRole(user.id);
+            } else {
+                // Not staff, or no DB connection -> Customers go to menu automatically?
+                // User said: "people who dont have admin they will just land to menu"
+                // So let's auto-redirect if NOT staff check
+                if (!user.id) window.location.href = 'menu.html';
+            }
         }
 
         function renderUser(user) {
@@ -138,52 +153,47 @@
             `;
         }
 
-        // Renamed logout to use Supabase
-        async function logout() {
-            await _supabase.auth.signOut();
-            localStorage.clear();
-            window.location.href = 'login.html';
-        }
-
         async function checkUserRole(userId) {
             try {
-                // Query the 'staff' table to see if this user is a staff member
-                // Also fetch the related role name
+                // Query the 'staff' table
                 const { data: staffMember, error } = await _supabase
                     .from('staff')
                     .select('*, roles(name)')
                     .eq('user_id', userId)
                     .single();
 
-                if (error) {
-                    // console.log('User is not staff or error:', error.message);
-                    return;
-                }
-
                 if (staffMember) {
-                    // User IS staff! Show the dashboard link.
+                    // IS STAFF: Show options
                     const staffLink = document.getElementById('staffLink');
                     staffLink.style.display = 'flex';
-
-                    // Update text with their specific role (e.g. "Owner Dashboard")
                     const roleName = staffMember.roles?.name || 'Staff';
                     staffLink.querySelector('.role-title').textContent = roleName + ' Dashboard';
 
-                    // Allow click
                     staffLink.onclick = () => {
-                        // Store staff info for the dashboard to use
                         localStorage.setItem('staffInfo', JSON.stringify(staffMember));
                         window.location.href = 'admin_dashboard.html';
                     };
+                } else {
+                    // NOT STAFF: Auto-redirect to Menu
+                    console.log('Non-staff user, redirecting to menu...');
+
+                    const container = document.querySelector('.landing-container');
+                    container.innerHTML = '<h2 style="color:white;">Redirecting to Menu...</h2>';
+
+                    setTimeout(() => {
+                        window.location.href = 'menu.html';
+                    }, 800);
                 }
 
             } catch (err) {
                 console.error('Unexpected error checking role:', err);
+                // Fallback to menu on error
+                window.location.href = 'menu.html';
             }
         }
 
         function logout() {
-            localStorage.clear();
+            localStorage.removeItem('user');
             window.location.href = 'login.html';
         }
     </script>
