--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -1,60 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Dashboard - Gourmet Bites Admin</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard - Gourmet Bites</title>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            display: flex;
-            background: #111;
-            max-width: 100%;
-            margin: 0;
+        :root {
+            --primary: #ff6600;
+            --secondary: #1a1a2e;
+            --bg: #16213e;
+            --text: #e0e0e0;
+            --card-bg: #1f2940;
         }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Outfit', sans-serif;
+            background: var(--bg);
+            color: var(--text);
+            display: flex;
+            min-height: 100vh;
+        }
+
+        /* Sidebar */
         .sidebar {
             width: 250px;
-            background: #1a1a2e;
-            height: 100vh;
+            background: var(--secondary);
             padding: 20px;
-            border-right: 1px solid #333;
-            position: fixed;
+            display: flex;
+            flex-direction: column;
+            border-right: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .main-content {
-            margin-left: 250px;
-            flex: 1;
-            padding: 40px;
-            width: 100%;
+        .logo {
+            font-size: 24px;
+            font-weight: 600;
+            color: var(--primary);
+            margin-bottom: 40px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
 
         .nav-item {
-            display: block;
-            padding: 15px;
-            color: #999;
-            text-decoration: none;
-            border-radius: 10px;
+            padding: 12px 15px;
             margin-bottom: 5px;
-            transition: 0.2s;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.3s;
+            color: #ccc;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            text-decoration: none;
         }
 
         .nav-item:hover,
         .nav-item.active {
-            background: #252540;
+            background: rgba(255, 102, 0, 0.1);
+            color: var(--primary);
+        }
+
+        /* Main Content */
+        .main-content {
+            flex: 1;
+            padding: 30px;
+            overflow-y: auto;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+
+        .user-profile {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .avatar {
+            width: 40px;
+            height: 40px;
+            background: var(--primary);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
             color: white;
         }
 
-        .nav-item.active {
-            color: #ff6600;
-            font-weight: bold;
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-bottom: 30px;
         }
 
-        .dashboard-card {
-            background: #1a1a2e;
-            padding: 24px;
-            border-radius: 16px;
-            border: 1px solid #333;
-            margin-bottom: 20px;
+        .stat-card {
+            background: var(--card-bg);
+            padding: 20px;
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+
+        .stat-value {
+            font-size: 24px;
+            font-weight: bold;
+            color: white;
+            margin: 10px 0;
+        }
+
+        .stat-label {
+            color: #888;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -63,45 +132,45 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <h2 style="color:white; margin-bottom:40px; padding-left:10px;">👨‍🍳 Admin</h2>
-
+        <div class="logo">🍴 Gourmet Admin</div>
         <a href="#" class="nav-item active">📊 Dashboard</a>
-        <a href="#" class="nav-item">🧾 Orders <span class="badge"
-                style="background:red; color:white; padding:2px 6px; border-radius:10px; font-size:10px; margin-left:5px;">3</span></a>
-        <a href="#" class="nav-item">🍔 Menu Editor</a>
-        <a href="#" class="nav-item">👥 Staff & Roles</a>
-        <a href="#" class="nav-item">🍽️ Tables</a>
-
-        <div style="margin-top:auto; padding-top:40px;">
-            <a href="#" onclick="logout()" class="nav-item">🚪 Logout</a>
-        </div>
+        <a href="#" class="nav-item">📦 Calls (Orders)</a>
+        <a href="#" class="nav-item">🍔 Menu Management</a>
+        <a href="#" class="nav-item">👥 Staff</a>
+        <a href="#" class="nav-item">🪑 Tables</a>
+        <div style="flex:1"></div>
+        <div class="nav-item" onclick="logout()">🚪 Logout</div>
     </div>
 
     <!-- Main Content -->
     <div class="main-content">
-        <h1 style="margin-bottom:10px;">Overview</h1>
-        <p style="color:#666; margin-bottom:40px;">Welcome back, <span id="adminName">Owner</span></p>
-
-        <!-- Stats Row -->
-        <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:20px; margin-bottom:40px;">
-            <div class="dashboard-card">
-                <div style="color:#999; font-size:14px;">Today's Sales</div>
-                <div style="font-size:32px; font-weight:bold; color:white;">$0.00</div>
-            </div>
-            <div class="dashboard-card">
-                <div style="color:#999; font-size:14px;">Active Orders</div>
-                <div style="font-size:32px; font-weight:bold; color:#ff6600;">0</div>
-            </div>
-            <div class="dashboard-card">
-                <div style="color:#999; font-size:14px;">Total Customers</div>
-                <div style="font-size:32px; font-weight:bold; color:white;">0</div>
+        <div class="header">
+            <h1>Dashboard</h1>
+            <div class="user-profile">
+                <span id="adminName">Loading...</span>
+                <div class="avatar">A</div>
             </div>
         </div>
 
-        <h2 style="margin-bottom:20px;">Recent Activity</h2>
-        <div class="dashboard-card"
-            style="min-height:300px; display:flex; align-items:center; justify-content:center; color:#666;">
-            Waiting for database connection...
+        <!-- Stats -->
+        <div class="stats-grid">
+            <div class="stat-card">
+                <div class="stat-label">Total Orders</div>
+                <div class="stat-value">0</div> <!-- Dynamic later -->
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Active Tables</div>
+                <div class="stat-value">0</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-label">Today's Revenue</div>
+                <div class="stat-value">$0.00</div>
+            </div>
+        </div>
+
+        <div class="stat-card" style="min-height: 300px;">
+            <h3>Recent Activity</h3>
+            <p style="color:#666; margin-top:20px;">No recent activity</p>
         </div>
     </div>
 
@@ -112,43 +181,50 @@
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBrbGFvZmpmcGNybGdldnhrb3p5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyNjY1MDcsImV4cCI6MjA4MDg0MjUwN30.sNg6OVLocM1D-bG9LXTlDSsy6s74oW1SQ89QWCMbOKE';
 
         // Initialize
-        if (typeof supabase === 'undefined') {
-            alert('Security System Failed to Load');
-            window.location.href = 'menu.html'; // Fail safe
+        let _supabase = null;
+        if (typeof window.supabase !== 'undefined') {
+            _supabase = window.supabase.createClient(supabaseUrl, supabaseAnonKey);
+        } else {
+            alert('System Error: Supabase not loaded. Check internet.');
+            window.location.href = 'menu.html';
         }
-        const _supabase = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
         // Security Check
         checkAdminAccess();
 
         async function checkAdminAccess() {
-            // 1. Get Session/User
-            // We check both Session (from Login) and LocalStorage (legacy/backup)
+            // 1. Get Session
             const { data: { session } } = await _supabase.auth.getSession();
             let user = session?.user;
 
+            // 2. Fallback to LocalStorage (Legacy/Sync)
             if (!user) {
-                // Check legacy local storage from admin login
                 const localAdmin = JSON.parse(localStorage.getItem('adminUser'));
-                if (localAdmin) {
-                    // Verify this user against Supabase Auth (simplified: just check DB roles for now)
-                    // Ideally we re-auth, but for now we trust the stored object IF we can verify role logic
-                    // Actually, better to redirect to login if no session.
-                    // But let's check if the ID in local storage is valid staff
-                    user = { id: localAdmin.id, email: localAdmin.email };
-                } else {
-                    // Check legacy customer storage?
+                if (localAdmin) user = { id: localAdmin.id, email: localAdmin.email };
+                else {
                     const data = JSON.parse(localStorage.getItem('user'));
                     if (data && data.id) user = data;
                 }
             }
 
             if (!user || !user.id) {
-                window.location.href = 'login.html'; // No identity found
+                window.location.href = 'login.html';
                 return;
             }
 
-            // 2. Strict Database Role Check
+            // === 3. ALLOWLIST BYPASS (Email & Phone) ===
+            const allowedAdmins = ['sapsinfocomm22@gmail.com', '+6590214181'];
+            // Check top-level email/phone OR user object properties
+            const uEmail = user.email || (user.user && user.user.email);
+            const uPhone = user.phone || (user.user && user.user.phone);
+
+            if (allowedAdmins.includes(uEmail) || allowedAdmins.includes(uPhone)) {
+                console.log('Allowlist Access Granted');
+                document.getElementById('adminName').textContent = `Owner (${uEmail || uPhone})`;
+                return; // Access Granted!
+            }
+
+            // 4. Strict DB Check (If not in allowlist)
             try {
                 const { data: staffMember, error } = await _supabase
                     .from('staff')
@@ -157,11 +233,9 @@
                     .single();
 
                 if (error || !staffMember) {
-                    console.warn('Unauthorized Access Attempt');
-                    window.location.href = 'menu.html'; // Boot to menu
+                    // Not valid staff? Bye.
+                    window.location.href = 'menu.html';
                 } else {
-                    // Valid Admin!
-                    console.log('Admin Access Granted:', staffMember.roles.name);
                     document.getElementById('adminName').textContent = `${staffMember.roles.name} (${user.email || 'Staff'})`;
                 }
 
